--- a/the-best/public/index.html
+++ b/the-best/public/index.html
@@ -15,7 +15,25 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      
     </div>
+    <div id='cards'></div>
+    <script>
+      function openOverview(){
+        const close = document.querySelector('.icon-close')
+        close.addEventListener('click', closeOverview)
+        console.log('opa')
+        console.log(close)
+  const container = document.querySelector('.container-overview')
+  container.style.display = 'flex'
+}
+      function closeOverview(){
+        console.log('opa')
+        const container = document.querySelector('.container-overview')
+        container.style.display = 'none'
+      }
+      
+
+
+    </script>
   </body>
 </html>
