--- a/the-best/public/index.html
+++ b/the-best/public/index.html
@@ -18,7 +18,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
     </div>
-    <div id='cards'></div>
+    <div id="cards"></div>
     <script>
       function remove(opa){
         document.location.reload(true)
