--- a/the-best/public/index.html
+++ b/the-best/public/index.html
@@ -85,7 +85,7 @@
   <section class="container-overview2">
     <div class="overview-content">
         <div class="header-overview">
-            <i class="far fa-star" onclick='trocarClasse(this)'></i>
+            <i class="far fa-star" onclick='trocarClasse(this)'><p class='starlabel'>The Best!</p></i>
             <h1 class='overview-title'>${div.title}</h1>
             <i class="fas fa-times" onclick='closeOverview()'></i>
         </div>
