--- a/the-best/public/index.html
+++ b/the-best/public/index.html
@@ -56,13 +56,14 @@
         container.innerHTML = `            
   <section class="container-overview2" >
     <div class="overview-content" style='background: url(${`https://image.tmdb.org/t/p/w500${div.backdrop_path}`}) no-repeat; background-size: 100% auto; padding: 0; margin:0;'>
-        <div class="opacity-display" style='background-color: rgba(27, 23, 29, 0.92); background-size: inherit; height: 100%; padding: 40px;'>
+        <div class="opacity-display" style='background-color: rgba(27, 23, 29, 0.88); background-size: inherit; height: 100%; padding: 30px; border-radius: 10px;'>
           <div class="header-overview">
+              <i class="far fa-star" onclick='trocarClasse(this)'><p class='starlabel'>The Best!</p></i>
               <h1 class='overview-title'>${div.title}</h1>
               <i class="fas fa-times" onclick='closeOverview()'></i>
           </div>
           <div class="overview-display">
-              <iframe class='video' width="500px" height="281px" src="https://www.youtube.com/embed/G1ahaiEni3E" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <iframe class='video' width="500px" height="281px" src="https://www.youtube.com/embed/${div.key}?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               <p class="overview">${div.overview}</p>
           </div>
         </div>
@@ -84,19 +85,21 @@
 
         var div = JSON.parse(items)
         container.innerHTML = `            
-  <section class="container-overview2">
-    <div class="overview-content">
-        <div class="header-overview">
-            <i class="far fa-star" onclick='trocarClasse(this)'><p class='starlabel'>The Best!</p></i>
-            <h1 class='overview-title'>${div.title}</h1>
-            <i class="fas fa-times" onclick='closeOverview()'></i>
-        </div>
-        <div class="overview-display">
-            <img src=${`https://image.tmdb.org/t/p/w500${div.backdrop_path}`} onerror="this.src = 'https://i.ibb.co/q0s4s8t/error.jpg'" class='overview-img'/>
-            <p class="overview">${div.overview}</p>
+        <section class="container-overview2" >
+    <div class="overview-content" style='background: url(${`https://image.tmdb.org/t/p/w500${div.backdrop_path}`}) no-repeat; background-size: 100% auto; padding: 0; margin:0;'>
+        <div class="opacity-display" style='background-color: rgba(27, 23, 29, 0.88); background-size: inherit; height: 100%; padding: 30px; border-radius: 10px;'>
+          <div class="header-overview">
+              <i class="far fa-star" onclick='trocarClasse(this)'><p class='starlabel'>The Best!</p></i>
+              <h1 class='overview-title'>${div.title}</h1>
+              <i class="fas fa-times" onclick='closeOverview()'></i>
+          </div>
+          <div class="overview-display">
+              <iframe class='video' width="500px" height="281px" src="https://www.youtube.com/embed/${div.key}?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <p class="overview">${div.overview}</p>
+          </div>
         </div>
     </div>
-</section> 
+  </section> 
         `
         container.style.display = 'flex'
         
